CLIENT / squashed bug for disabling button for event create modal, add padding to cards

--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -38,7 +38,7 @@ $cardBackground2: #fdf9f4;
 
 
 .card {
-  padding: 10px;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   position: relative;
